--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,11 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
+# MYSQL DB 설정
+#spring.datasource.url=jdbc:mysql://localhost:3306/ssb?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=1234
+
 # JPA LOG (콘솔창에 sql 보여주기)
 spring.jpa.show-sql=true
 
