--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,24 +7,25 @@ spring.application.name=sbb
 # server.servlet.context-path=/mysite
 
 # DATABASE
-spring.h2.console.enabled=true
+# spring.h2.console.enabled=true
 #주소
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:C:/java/local
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# spring.h2.console.path=/h2-console
+# spring.datasource.url=jdbc:h2:C:/java/local
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=
 
 # MYSQL DB 설정
-#spring.datasource.url=jdbc:mysql://localhost:3306/ssb?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://localhost:3306/ssb?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1234
 
 # JPA LOG (콘솔창에 sql 보여주기)
 spring.jpa.show-sql=true
 
 # JPA 설정 (1.h2 sql    2.auto update)
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
